--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="keywords"
       content="Serum, SRM, Serum DEX, DEFI, Decentralized Finance, Decentralised Finance, Crypto, ERC20, Ethereum, Decentralize, Solana, SOL, SPL, Cross-Chain, Trading, Fastest, Fast, SerumBTC, SerumUSD, SRM Tokens, SPL Tokens"
     />
+    
     <meta
       name="description"
       content="Serum - The world's first completely decentralized derivatives exchange with trustless cross-chain trading"
@@ -36,7 +37,7 @@
     <meta name="twitter:title" content="Serum DEX" />
     <meta
       name="twitter:description"
-      content="Serum DEX - The world's first completely decentralized derivatives exchange with trustless cross-chain trading"
+      content="SHROOMZ DEX - The fastest growing Solana Platform"
     />
     <meta name="twitter:image" content="https://i.imgur.com/YS5Csfy.png" />
     
