--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     
     <meta
       name="description"
-      content="Serum - The world's first completely decentralized derivatives exchange with trustless cross-chain trading"
+      content="SHROOMZ DEX"
     />
     <link
       rel="apple-touch-icon"
