--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     
     <meta
       name="description"
-      content="SHROOMZ DEX"
+      content="SHROOMZ DEX - The fastest growing Solana Platform"
     />
     <link
       rel="apple-touch-icon"
